linux: Reorganize patches and fragments by machine
Split up linux patches based on machine and get rid of the name
logic used until now (COM-, SNR-, GRR-). Each machine have now
specific directory with its patches.
Also, for the configuration files we have now separate .scc and
.cfg for each machine to handle differences.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -84,7 +84,7 @@ will be fixed in later versions of the chip.
 Note that, by default, this patch will do nothing.  To enable it, add
 'iTCO_wdt.assume_noreboot_access=1' to the Linux command line.
 
-Included as COM-drivers-watchdog-Ignore-No-Reboot-Bit.patch
+Included as 0001-drivers-watchdog-Ignore-No-Reboot-Bit.patch
 
 
 clocksource: Add option to force acpi_pm as clocksource watchdog
@@ -101,14 +101,14 @@ and in dmesg look for:
     RICARDO: Force acpi_pm as watchdog
 
 Included as
-COM-clocksource-Add-option-to-force-acpi_pm-as-clocksour.patch
+0002-clocksource-Add-option-to-force-acpi_pm-as-clocksour.patch
 
 
-Support for SIOV (only for GRR)
--------------------------------
+Support for SIOV (for GRR and PMR)
+----------------------------------
 
-GRR-platform-msi-Add-device-MSI-infrastructure.patch
-GRR-genirq-msi-Provide-helpers-to-return-Linux-IRQ-dev_m.patch
+0001-platform-msi-Add-device-MSI-infrastructure.patch
+0002-genirq-msi-Provide-helpers-to-return-Linux-IRQ-dev_m.patch
 
 
 II. Building meta-intel-bsp
