Backport S3M Based on the Intel VSEC Driver
NOT YET PUBLICLY AVAILABLE!!!!!

The eliminates the need for the RDK OOBMSM driver when using
CPU Attestation, SDOS, or VAB.

Also, the intel_vsec driver is no longer blacklisted.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -118,6 +118,19 @@ This has been upstreamed in a later version of the kernel
 
 0003-intel_idle-add-Grand-Ridge-SoC-support.patch
 
+Support for the Upstream S3M Driver
+-----------------------------------
+
+NOT YET PUBLICLY AVAILABLE!!!!!
+
+The change, upsteam, is to add S3M to the Intel VSEC driver (which
+provides endpoints on the auxiliary bus).  This means the RDK OOBMSM
+driver is no longer needed.
+
+0004-platform-x86-intel-vsec-Move-structures-to-header.patch
+0005-Added-S3M-auxiliary-driver-functionality-to-vsec-dri.patch
+0006-intel_s3m-Initial-release-for-intel_s3m-driver.patch
+
 
 II. Building meta-intel-bsp
 ===========================
