--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -118,6 +118,29 @@ This has been upstreamed in a later version of the kernel
 
 0003-intel_idle-add-Grand-Ridge-SoC-support.patch
 
+Perf Updates for GRR
+--------------------
+
+All of the following have been upstreamed, but some required modification.
+
+0004-perf-Add-branch_sample_call_stack.patch
+0005-perf-Add-branch-stack-counters.patch
+0006-perf-x86-Add-PERF_X86_EVENT_NEEDS_BRANCH_STACK-flag.patch
+0007-perf-x86-intel-Support-branch-counters-logging.patch
+0008-perf-test-Basic-branch-counter-support.patch
+0009-tools-headers-UAPI-Sync-include-uapi-linux-perf_even.patch
+0010-perf-tools-Add-branch-counter-knob.patch
+0011-perf-header-Support-num-and-width-of-branch-counters.patch
+0012-perf-x86-intel-uncore-Support-Granite-Rapids.patch
+0013-perf-x86-intel-uncore-Support-IIO-free-running-count.patch
+0014-perf-x86-uncore-Use-u64-to-replace-unsigned-for-the-.patch
+0015-perf-x86-intel-uncore-Support-Sierra-Forest-and-Gran.patch
+0016-perf-x86-intel-uncore-Generic-uncore_get_uncores-and.patch
+0017-perf-x86-intel-cstate-Cleanup-duplicate-attr_groups.patch
+0018-perf-x86-intel-cstate-Add-Sierra-Forest-support.patch
+0019-perf-x86-intel-cstate-Add-Grand-Ridge-support.patch
+0020-x86-smp-Export-symbol-cpu_clustergroup_mask.patch
+
 
 II. Building meta-intel-bsp
 ===========================
