meta-intel-bsp: Backport a SPI Change for 6.6
An issue with the SPI driver was fixed after 6.6.  This commit
back-ports

    cff49d5
    spi: Unify error codes by replacing -ENOTSUPP with -EOPNOTSUPP

from

    git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -104,6 +104,13 @@ Included as
 0002-clocksource-Add-option-to-force-acpi_pm-as-clocksour.patch
 
 
+Support Serial Flash Access (MTD) to Boot Flash
+-----------------------------------------------
+
+Allows access to the secondary boot flash from Linux using the MTD driver.
+
+0003-spi-Unify-error-codes-by-replacing-ENOTSUPP-with-EOP.patch
+
 Support for SIOV (for GRR and PMR)
 ----------------------------------
 
