meta-intel-bsp: Add a SPI Back Port
Include

    mtd: spi-nor: handle unsupported FSR opcodes properly

from https://lkml.org/lkml/2022/6/10/1021.

This is required for some types of flash.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -111,14 +111,15 @@ Removes some limitations to the use of PTWRITE.  Without the above
 'perf record' and 'per script' issue warnings about lost data.
 
 
-Support Serial Flash Access (MTD) to Boot Flash (only for GRR)
---------------------------------------------------------------
+Support Serial Flash Access (MTD) to Boot Flash
+-----------------------------------------------
 
 Allows access to the secondary boot flash from Linux using the MTD driver.
 
 0007-mtd-spi-nor-intel-spi-Move-platform-data-header-to-x.patch
 0008-mtd-spi-nor-intel-spi-Add-support-for-second-flash-c.patch
 0009-Introduce-an-Intel-SPI-controller-level-mutex.patch
+0010-mtd-spi-nor-handle-unsupported-FSR-opcodes-properly.patch
 
 Support for SIOV (only for GRR)
 -------------------------------
