intel-axxia: Add support for GCC v11
GCC 11.4 support is required for performance testing.

A0405 - GCC 11 with Linux 6.6/Scarthgap

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/README
+++ b/meta-intel-distro/README
@@ -284,8 +284,8 @@ NOTE: No preferred version should be set for linux-local provider.
     * 'cd ase/simics'
     * tar czf simics-<simics-version>.tgz simics-<simics-version>
 
-2.3.10. Choose a different GCC version to use: 15.% (gcc15 feature).
-    Default version is 13.%.
+2.3.10. Choose a different GCC version to use: 15.% (gcc15 feature) or 11.%
+    (gcc11 feature). Default version is 13.%.
 
     DISTRO_FEATURES:append = " gcc15"
 
