--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -147,7 +147,8 @@ All of the following have been upstreamed, but some required modification.
 0018-perf-x86-intel-cstate-Add-Sierra-Forest-support.patch
 0019-perf-x86-intel-cstate-Add-Grand-Ridge-support.patch
 0020-x86-smp-Export-symbol-cpu_clustergroup_mask.patch
-
+0021-platform-x86-intel-uncore-freq-Ignore-minor-version-.patch
+0022-platform-x86-intel-tpmi-Add-defines-to-get-version-i.patch
 
 II. Building meta-intel-bsp
 ===========================
