meta-intel-bsp: Revert Frame Preemption (Linux 6.6)
In the Intel Linux LTS repository, frame preemption support has been
added to ethtool -- BUT the user space ethtool has not yet been updated.
Until that happens, revert support in the kernel to get ethtool working
again.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -111,6 +111,14 @@ Allows access to the secondary boot flash from Linux using the MTD driver.
 
 0003-spi-Unify-error-codes-by-replacing-ENOTSUPP-with-EOP.patch
 
+Revert Frame Preemption Support
+-------------------------------
+
+Until this has been upstreamed, it breaks ethtool.  As the feature is
+not used by this project, reverting!
+
+0004-ethtool-Revert-Frame-Preemption-Support.patch
+
 Support for SIOV (for GRR and PMR)
 ----------------------------------
 
